fixed login link

--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -43,7 +43,9 @@
                     <li><a href="{% url 'logout' %}">logout</a></li>
                 {% else %}
 <!--                    <li><a href="{% url 'login' %}">login</a></li>-->
-                    <li><a href="http://localhost:8000/accounts/login">login</a></li>
+<!--                    <li><a href="http://localhost:8000/accounts/login">login</a></li>-->
+                    <li><a href="/accounts/login">login</a></li>
+
 
                 {% endif %}
             </ul>
